WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158998
Begin moving the Apple Pay code to the open source repository
https://bugs.webkit.org/show_bug.cgi?id=158998
Summary
Begin moving the Apple Pay code to the open source repository
Anders Carlsson
Reported
2016-06-21 14:51:11 PDT
moving the Apple Pay code to the open source repository
Attachments
Patch
(77.19 KB, patch)
2016-06-21 14:59 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(77.21 KB, patch)
2016-06-21 15:16 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-06-21 14:59:51 PDT
Created
attachment 281780
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-21 15:01:09 PDT
Attachment 281780
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/applepay/PaymentCoordinatorClient.h:44: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/applepay/PaymentCoordinator.cpp:56: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/applepay/PaymentCoordinator.h:51: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2016-06-21 15:11:05 PDT
Comment on
attachment 281780
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281780&action=review
> Source/WebCore/Modules/applepay/PaymentCoordinator.h:2 > + * Copyright (C) 2015 Apple Inc. All rights reserved.
Just 2015?
> Source/WebCore/Modules/applepay/PaymentCoordinator.h:50 > + bool supportsVersion(unsigned version); > + bool canMakePayments();
const?
> Source/WebCore/Modules/applepay/PaymentCoordinatorClient.h:26 > +#pragma once
Is this what we do now?
Anders Carlsson
Comment 4
2016-06-21 15:14:39 PDT
(In reply to
comment #3
)
> Comment on
attachment 281780
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=281780&action=review
> > > Source/WebCore/Modules/applepay/PaymentCoordinator.h:2 > > + * Copyright (C) 2015 Apple Inc. All rights reserved. > > Just 2015?
No, 2016 as well. Thanks.
> > > Source/WebCore/Modules/applepay/PaymentCoordinator.h:50 > > + bool supportsVersion(unsigned version); > > + bool canMakePayments(); > > const?
They call out to the client so I don't think we can use const.
> > > Source/WebCore/Modules/applepay/PaymentCoordinatorClient.h:26 > > +#pragma once > > Is this what we do now?
https://lists.webkit.org/pipermail/webkit-dev/2016-March/028058.html
Anders Carlsson
Comment 5
2016-06-21 15:16:53 PDT
Created
attachment 281785
[details]
Patch
WebKit Commit Bot
Comment 6
2016-06-21 15:19:25 PDT
Attachment 281785
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/applepay/cocoa/PaymentCocoa.mm:30: You should not add a blank line before implementation file's own header. [build/include_order] [4] ERROR: Source/WebCore/Modules/applepay/PaymentCoordinatorClient.h:44: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/applepay/PaymentCoordinator.cpp:56: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/applepay/PaymentCoordinator.h:51: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 4 in 19 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 7
2016-06-21 15:40:02 PDT
Comment on
attachment 281785
[details]
Patch rs=me, but try not to comment anything out this time :)
Anders Carlsson
Comment 8
2016-06-21 15:46:28 PDT
Committed
r202298
: <
http://trac.webkit.org/changeset/202298
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug