Begin moving the Apple Pay code to the open source repository https://bugs.webkit.org/show_bug.cgi?id=158998

Reviewed by Tim Horton.

Source/JavaScriptCore:

* Configurations/FeatureDefines.xcconfig:
Add ENABLE_APPLE_PAY.

Source/WebCore:

* Configurations/FeatureDefines.xcconfig:
Add ENABLE_APPLE_PAY.

* Modules/applepay/PaymentCoordinator.cpp: Added.
* Modules/applepay/PaymentCoordinator.h: Added.
* Modules/applepay/PaymentCoordinatorClient.h: Added.
* Modules/applepay/PaymentRequest.cpp: Added.
* Modules/applepay/PaymentRequest.h: Added.
* Modules/applepay/cocoa/PaymentCocoa.mm: Added.
* WebCore.xcodeproj/project.pbxproj:
Add new files.

* dom/EventNames.h:
Add new event names.

* page/MainFrame.h:
Use a forward declaration.

Source/WebKit/mac:

* Configurations/FeatureDefines.xcconfig:
Add ENABLE_APPLE_PAY.

Source/WebKit2:

* Configurations/FeatureDefines.xcconfig:
Add ENABLE_APPLE_PAY.

Tools:

* TestWebKitAPI/Configurations/FeatureDefines.xcconfig:
Add ENABLE_APPLE_PAY.

Canonical link: https://commits.webkit.org/177065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202298 268f45cc-cd09-0410-ab3c-d52691b4dbfc